Development (#3)
* Improve error handling in AllocationRunModal

Refines the error handling logic in AllocationRunModal by using 'unknown' for the error type and safely extracting error messages. Also updates handleParamChange to use a more specific value type.

* Update Postman collection with new endpoints and fixes

Renamed the 'internship-types' group to 'subjects' and updated related endpoints and request bodies. Added new endpoint groups for 'teacher-subjects', 'teacher-availability', 'internship-types', 'internship-demand', 'credit-hour-tracking', 'zone-constraints', and 'allocation', each with CRUD operations and example payloads. Also updated the bearer token in the collection authentication.

* Look of subjects checkboxes on the teacher form  improvement

* Add allocation algorithm integration tests and fix build issues

* add subjects to teachers (backend)

* adding subjects into TeacherResponseDto

* add subject to teacher mapper

* change teacherService to get subjects

* add subjects in View

* fix title in teachers view dialog

* align buttons to the right in the create teacher form

* fix usage cycle translations in view teachers form

* JavaDoc for SubjectSimpleDto

* fix HashSet type for subjects

* separating subject part of teacher's form in component TeacherSubjectsFiled

* Update snyk Policy Expiry Date

* Fix checkstyle whitespace in TeacherService and SubjectSimpleDto

* Add Radix UI switch dependency

* changing standart selects to Selects from components/ui

* Internship demand page refactor

* refactor InternshipDemandPerYearPage. Separate Create/Edit dialog

* leave only primary and secondary school types in create internship dialog

* make filters in internshipdemand work

* Fix editing the internship demand

* feat(users): add user types

* add UserForm component

* add users.json

* add UserDialogs component

* update userService

* adding useUserPage hook

* add useUsersColumnConfig based on ColumnConfig

* fix(users): resolve TS unus