@@ -21,15 +21,27 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
+/**
+ * Unit tests for {@link ZoneConstraintService}.
+ * <p>
+ * Validates zone constraint CRUD operations, pagination, and validation.
+ * </p>
+ */
 @ExtendWith(MockitoExtension.class)
 class ZoneConstraintServiceTest {
 
@@ -45,8 +57,8 @@ class ZoneConstraintServiceTest {
     @InjectMocks
     private ZoneConstraintService zoneConstraintService;
 
-    private ZoneConstraint testConstraint;
     private InternshipType testInternshipType;
+    private ZoneConstraint testConstraint;
     private ZoneConstraintResponseDto testResponseDto;
 
     @BeforeEach
@@ -74,100 +86,119 @@ class ZoneConstraintServiceTest {
     }
 
     @Test
-    void getAll_ReturnsAllConstraints() {
-        when(zoneConstraintRepository.findAll()).thenReturn(Arrays.asList(testConstraint));
+    void getAllReturnsAllConstraints() {
+        when(zoneConstraintRepository.findAll()).thenReturn(List.of(testConstraint));
+
         List<ZoneConstraint> result = zoneConstraintService.getAll();
+
         assertNotNull(result);
         assertEquals(1, result.size());
         verify(zoneConstraintRepository).findAll();
     }
 
     @Test
-    void getPaginated_WithoutSearch_ReturnsPagedResults() {
-        Page<ZoneConstraint> page = new PageImpl<>(Arrays.asList(testConstraint));
+    void getPaginatedWithoutSearchReturnsPagedResults() {
+        Page<ZoneConstraint> page = new PageImpl<>(List.of(testConstraint));
         when(zoneConstraintRepository.findAll(any(Specification.class), any(Pageable.class))).thenReturn(page);
-        Map<String, String> queryParams = Map.of("page", "1", "pageSize", "10", "sortBy", "id", "sortOrder", "asc");
+
+        Map<String, String> queryParams = Map.of(
+                "page", "1",
+                "pageSize", "10",
+                "sortBy", "id",
+                "sortOrder", "asc"
+        );
+
         Map<String, Object> result = zoneConstraintService.getPaginated(queryParams, null);
+
         assertNotNull(result);
         assertTrue(result.containsKey("items"));
         verify(zoneConstraintRepository).findAll(any(Specification.class), any(Pageable.class));
     }
 
     @Test
-    void getById_ExistingId_ReturnsConstraint() {
+    void getByIdExistingIdReturnsConstraint() {
         when(zoneConstraintRepository.findById(1L)).thenReturn(Optional.of(testConstraint));
+
         Optional<ZoneConstraint> result = zoneConstraintService.getById(1L);
+
         assertTrue(result.isPresent());
         verify(zoneConstraintRepository).findById(1L);
     }
 
     @Test
-    void create_ValidDto_ReturnsCreatedConstraint() {
-        ZoneConstraintCreateDto createDto = new ZoneConstraintCreateDto();
-        createDto.setZoneNumber(1);
-        createDto.setInternshipTypeId(1L);
-        createDto.setIsAllowed(true);
-        
-        ZoneConstraint mappedConstraint = new ZoneConstraint();
-        mappedConstraint.setZoneNumber(1);
-        mappedConstraint.setInternshipType(testInternshipType);
-        
+    void createValidDtoReturnsCreatedConstraint() {
+        ZoneConstraintCreateDto createDto = createDto(1, 1L, true);
+        ZoneConstraint mappedConstraint = mappedConstraint(1, testInternshipType);
+
         when(internshipTypeRepository.findById(1L)).thenReturn(Optional.of(testInternshipType));
         when(zoneConstraintMapper.toEntityCreate(createDto)).thenReturn(mappedConstraint);
         when(zoneConstraintRepository.existsByZoneNumberAndInternshipTypeId(1, 1L)).thenReturn(false);
         when(zoneConstraintRepository.save(any(ZoneConstraint.class))).thenReturn(testConstraint);
         when(zoneConstraintMapper.toResponseDto(testConstraint)).thenReturn(testResponseDto);
-        
+
         ZoneConstraintResponseDto result = zoneConstraintService.create(createDto);
+
         assertNotNull(result);
         verify(zoneConstraintRepository).save(any(ZoneConstraint.class));
     }
 
     @Test
-    void create_DuplicateConstraint_ThrowsException() {
-        ZoneConstraintCreateDto createDto = new ZoneConstraintCreateDto();
-        createDto.setZoneNumber(1);
-        createDto.setInternshipTypeId(1L);
-        createDto.setIsAllowed(true);
-        
-        ZoneConstraint mappedConstraint = new ZoneConstraint();
-        mappedConstraint.setZoneNumber(1);
-        mappedConstraint.setInternshipType(testInternshipType);
-        
+    void createDuplicateConstraintThrowsException() {
+        ZoneConstraintCreateDto createDto = createDto(1, 1L, true);
+        ZoneConstraint mappedConstraint = mappedConstraint(1, testInternshipType);
+
         when(internshipTypeRepository.findById(1L)).thenReturn(Optional.of(testInternshipType));
         when(zoneConstraintMapper.toEntityCreate(createDto)).thenReturn(mappedConstraint);
         when(zoneConstraintRepository.existsByZoneNumberAndInternshipTypeId(1, 1L)).thenReturn(true);
-        
+
         assertThrows(DuplicateResourceException.class, () -> zoneConstraintService.create(createDto));
-        verify(zoneConstraintRepository, never()).save(any());
+        verify(zoneConstraintRepository, never()).save(any(ZoneConstraint.class));
     }
 
     @Test
-    void update_ValidDto_ReturnsUpdatedConstraint() {
+    void updateValidDtoReturnsUpdatedConstraint() {
         ZoneConstraintUpdateDto updateDto = new ZoneConstraintUpdateDto();
         updateDto.setDescription("Updated");
-        
+
         when(zoneConstraintRepository.findById(1L)).thenReturn(Optional.of(testConstraint));
         when(zoneConstraintRepository.save(any(ZoneConstraint.class))).thenReturn(testConstraint);
         when(zoneConstraintMapper.toResponseDto(testConstraint)).thenReturn(testResponseDto);
-        
+
         ZoneConstraintResponseDto result = zoneConstraintService.update(1L, updateDto);
+
         assertNotNull(result);
         verify(zoneConstraintRepository).save(testConstraint);
     }
 
     @Test
-    void delete_ExistingId_DeletesSuccessfully() {
+    void deleteExistingIdDeletesSuccessfully() {
         when(zoneConstraintRepository.existsById(1L)).thenReturn(true);
         doNothing().when(zoneConstraintRepository).deleteById(1L);
+
         assertDoesNotThrow(() -> zoneConstraintService.delete(1L));
         verify(zoneConstraintRepository).deleteById(1L);
     }
 
     @Test
-    void delete_NonExistingId_ThrowsException() {
+    void deleteNonExistingIdThrowsException() {
         when(zoneConstraintRepository.existsById(999L)).thenReturn(false);
+
         assertThrows(ResourceNotFoundException.class, () -> zoneConstraintService.delete(999L));
         verify(zoneConstraintRepository, never()).deleteById(any());
+    }
+
+    private static ZoneConstraintCreateDto createDto(int zoneNumber, Long internshipTypeId, boolean allowed) {
+        ZoneConstraintCreateDto dto = new ZoneConstraintCreateDto();
+        dto.setZoneNumber(zoneNumber);
+        dto.setInternshipTypeId(internshipTypeId);
+        dto.setIsAllowed(allowed);
+        return dto;
+    }
+
+    private static ZoneConstraint mappedConstraint(int zoneNumber, InternshipType type) {
+        ZoneConstraint constraint = new ZoneConstraint();
+        constraint.setZoneNumber(zoneNumber);
+        constraint.setInternshipType(type);
+        return constraint;
     }
 }
